<resources>

    <string name="app_name">Note</string>
    <!-- 登陆界面 -->
	<string name="login_user_hint">账号</string>
	<string name="login_password_hint">密码</string>
	<string name="login_string">登录</string>
	<string name="login_clear_password">忘记密码</string>
	
	
	<!-- 列表页面 -->
	<string name="note_item_create_time">修改时间：</string>
	<string name="note_item_image_string">图片：</string>
	<string name="note_search_hint_string">搜索笔记</string>
	<string name="progress_dialog_title">温馨提示</string>
	<string name="note_list_title">记事本</string>
	
	
	<!-- 笔记编辑页面 -->
	<string name="note_edit_title_hint">标题...</string>
	<string name="note_edit_save">保存</string>
	<string name="note_add_title">点击输入标题</string>
	<string name="cancel">取消</string>
	<string name="finish_record">完成</string>
	
	<string name="camera">拍照</string>
	<string name="record_trans_btn_title">转文字</string>
	<string name="recoding">录音</string>
	<string name="handwrite">手写</string>
	<string name="drawing">涂鸦</string>
	<string name="file">图片</string>
	<string name="tags">标签</string>
	<string name="category">分类</string>
	<string name="richtext_choose_tip">您可以选择下列方式对富文本进行编辑</string>
	<string name="richtext_choose_append">追加文本</string>
	<string name="richtext_choose_reformat">转换文本</string>
	<string name="intent_no_camera">没有找到摄像头</string>
	<string name="timer_format">%1$02d:%2$02d</string>
	
	<!-- 附件列表页面 -->
	<string name="rc_back">返回</string>
	<string name="back">"  返回"</string>
	<string name="attachlist_title_plant">附件列表</string>
	<string name="loading">载入中...</string>
	<string name="empty_attach">您的笔记中没有附件</string>
	
</resources>
