<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background_back" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/note_top_bar_view" android:background="@drawable/navigationbar" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <Button android:id="@+id/nav_back_btn" android:onClick="back" android:background="@drawable/nav_back_btn_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/back" android:layout_centerVertical="true" style="@style/nav_normal_btn_title" />
        <TextView android:id="@+id/nav_title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attachlist_title_plant" android:layout_centerVertical="true" style="@style/nav_header_titile" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/note_top_bar_view">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ListView android:id="@android:id/list" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:smoothScrollbar="true" />
            <LinearLayout 
                android:id="@+id/footview" 
                android:background="@drawable/login_paper" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:orientation="vertical"
                />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:id="@+id/load" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleSmall" />
            <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/loading" style="@style/loadTxt" />
        </LinearLayout>
        <TextView android:id="@+id/empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/empty_attach" style="@style/emptyTxt" />
    </FrameLayout>
</RelativeLayout>