<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white_color"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_color"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingLeft="@dimen/login_padding_left"
        android:paddingRight="@dimen/login_padding_right"
        android:background="@color/white_color"
        android:orientation="vertical"
        >
        <!-- logo -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:background="@color/white_color"
            >
            <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                />
        </LinearLayout>
        
        
        <!-- 账号 -->	
       <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_weight="1"
	            android:layout_height="0dp"
	            android:orientation="horizontal"
	            >
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_height="@dimen/login_info_height"
                android:layout_weight="1"
                android:background="@color/white_color"
                android:orientation="horizontal">
                <ImageView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:src="@drawable/user"
                />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_height="@dimen/login_info_height"
                android:layout_weight="5"
                android:background="@color/white_color"
                android:orientation="horizontal">
	            <EditText
	                android:id="@+id/et_username"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/login_user_hint"
	                android:layout_gravity="center"
	                />
	        </LinearLayout>    
       </LinearLayout>
       <!-- 密码 -->
       <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_weight="1"
	            android:layout_height="0dp"
	            android:orientation="horizontal"
	            >
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_height="@dimen/login_info_height"
                android:layout_weight="1"
                android:background="@color/white_color"
                android:orientation="horizontal">
                <ImageView 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:src="@drawable/password"
                />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_height="@dimen/login_info_height"
                android:layout_weight="5"
                android:orientation="horizontal">
	            <EditText 
	                android:id="@+id/et_password"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:inputType="textPassword"
	                android:hint="@string/login_password_hint"
	                android:layout_gravity="center"
	                />
	        </LinearLayout>    
       </LinearLayout>
        
        <!-- 登陆按钮 -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/login_button_margin_top"
            >
            <Button 
               	android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_string_height"
                android:background="@color/light_blue_color"
                android:text="@string/login_string"
                android:textSize="@dimen/login_text_size"
                android:textColor="@color/white_color"
                android:layout_gravity="center"
                
                />
        </LinearLayout>
        
        <!-- 忘记密码 -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            >
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:id="@+id/tv_clear_password"
                android:text="@string/login_clear_password"
                android:textSize="@dimen/note_item_text_size"
                android:textColor="@color/view_content_gray"
                />
        </LinearLayout>
        
    </LinearLayout>    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/white_color"
        />
</LinearLayout>