<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="0px"  
        android:layout_height="0px" android:focusable="true"  
        android:focusableInTouchMode="true"></LinearLayout> 
        
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/back_light_gray"
        android:orientation="horizontal" 
        android:baselineAligned="false">
        
        <Button android:id="@+id/nav_back_btn" 
            android:onClick="back" 
            android:background="@drawable/nav_back_btn_selector" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="8.0dip" 
            android:text="@string/back" 
            android:layout_centerVertical="true" 
            style="@style/nav_normal_btn_title" />
        
        <ImageButton 
                android:onClick="editNote"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/note_detail_edit"
                />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/white_color"
        android:orientation="vertical"
        >
        <TextView 
            android:id="@+id/tv_note_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />
        <TextView 
            android:id="@+id/tv_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/note_view_content_size"  
	        android:textColor="@color/black_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical"
        >
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:scaleType="fitXY"
            android:src="@drawable/dashline"
            />
    </LinearLayout>
    <ScrollView 
        android:id="@+id/sv_content"
		android:layout_width="fill_parent" 
		android:background="@color/white_color"
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp"
		android:scrollbars="none"
		android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            
            <com.comtop.easynote.view.UnderLineEditText  
	         android:id="@+id/et_content"  
	         android:layout_width="match_parent"  
	         android:layout_height="wrap_content"  
	         android:textColor="@color/view_content_gray"
	         android:textSize="@dimen/note_view_content_size"  
	         android:layout_marginLeft="1.0dip" 
             android:layout_marginTop="10.0dip" 
             android:layout_marginRight="1.0dip" 
             android:layout_marginBottom="1.0dip" 
	         android:background="@null"  
	         android:gravity="top"  
	         android:lineSpacingMultiplier="1.3"  
	         android:inputType="textMultiLine" /> 
	    	
	        <FrameLayout android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
		        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
		            <com.comtop.easynote.view.ListViewForScrollView 
		                android:id="@android:id/list" 
		                android:fadingEdge="none" 
		                android:layout_width="fill_parent" 
		                android:layout_height="fill_parent" 
		                android:smoothScrollbar="true" />
		            <LinearLayout 
		                android:id="@+id/footview" 
		                android:background="@drawable/login_paper" 
		                android:layout_width="fill_parent" 
		                android:layout_height="wrap_content" 
		                android:orientation="vertical"
		                />
		        </LinearLayout>
		        <LinearLayout android:layout_gravity="center" android:id="@+id/load" android:layout_width="wrap_content" android:layout_height="wrap_content">
		            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleSmall" />
		            <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/loading" style="@style/loadTxt" />
		        </LinearLayout>
		        <TextView android:id="@+id/empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/empty_attach" style="@style/emptyTxt" />
		    </FrameLayout>
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>